--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Johnny's Zoo</title>
+    <title>Carina's Zoo</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
   </head>
   <body>
-    <h1>Welcome to Johnny's Zoo</h1>
+    <h1>Welcome to Carina's Zoo</h1>
     <h3>See the animals at the zoo:</h3>
+    <div class="link">
+      <a href="owl.html">Owl</a>
+    </div>
+
+    <div class="link">
+      <a href="cat.html">Cat</a>
+    </div>
+  
     <div class="link">
       <a href="polar-bear.html">Polar Bear</a>
     </div>
+
+    <div class="link">
+      <a href="racoon.html">Racoon</a>
+    </div>
+
   </body>
 </html>
