--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
   </head>
   <body>
-    <h1>Welcome to Carina's Zoo</h1>
+    <h1>Welcome to Carina's Pawlovers Zoo</h1>
     <h3>See the animals at the zoo:</h3>
     <div class="link">
-      <a href="owl.html">Owl</a>
+      <a href="panda.html">Panda</a>
     </div>
 
     <div class="link">
