added the images into respective animal pages

--- a/cat.html
+++ b/cat.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <h1>Cat</h1>
-    <img src="img/cat.png" alt="cat">
+    <img src="img/cat.gif" style="width:200px;height:300px;" alt="cat">
+    <img src="img/catSports.gif" style="width:200px;height:300px;" alt="cat">
+
     <p>
       Meet the cat! Cats are small carnivourous mammals that have lived alongside humans for thousands of years.
       They are undoubtly one of the most popular pets in the world, known for their agility, curiousity, and 
@@ -16,7 +18,7 @@
     <ul>
       <li>Cats have unique nose prints o.O</li>
       <li>Cats sleep up to 12 to 16 hours a day</li>
-      <li>Cats have 5 toes on front paws and 4 in back paws , unless he is a polydactl</li>
+      <li>Cats have 5 toes on front paws and 4 in back paws, unless he is a polydactl</li>
     </ul>
   </body>
 </html>
