--- a/racoon.html
+++ b/racoon.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" type="text/css" href="css/racoon.css">
   </head>
   <body>
-    <h1>racoon</h1>
-    <img src="img/racoon.png" alt="racoon">
+    <h1>Racoon</h1>
+    <img src="img/racoonFreeze.gif" alt="Racoon caught in action. ">
     <p>
       Meet the racoon! Raccoons are medium-sized 16 to 28 inch long mammals native to North America. They are easily 
       recognized by the black markings across their eyes, their pointed snouts and bushy ringed  tails. Raccoons are 
@@ -16,8 +16,8 @@
       or property. Homeowners get headaches upon tracks of racoon activities and its a rightfully valid concern 
       since they are known to carry rabies and parasites. Clearly, they are a very resouceful seemingly harmless but dangerous bunch.
 
-      Here are some racoon facts:
       <ul>
+        <p>Here are some racoon facts:</p>
         <li>They have agile, sensitive and dexterious front paws allowing them to open trash cans and latches</li>
         <li>The myth that they wash their food before eating is false. In fact they are dousing, wetting their paws to increase
         sensitivity. That way they better understand what they are about to eat.</li>
