fixed cat page formatting

--- a/index.html
+++ b/index.html
@@ -7,16 +7,31 @@
   <body>
     <h1>Welcome to Carina's Pawlovers Zoo</h1>
     <h3>See the animals at the zoo:</h3>
-    <div class="link">
-      <a href="panda.html">Panda</a>
-    </div>
+    <div class="container">
+      <div class="link">
+        <a href="panda.html">Panda
+        <img src="img/panda.png" style="width:300px;height:200px;" alt="panda">
+        </a>
+      </div>
 
-    <div class="link">
-      <a href="cat.html">Cat</a>
-    </div>
-  
-    <div class="link">
-      <a href="polar-bear.html">Polar Bear</a>
+      <div class="link">
+        <a href="cat.html">Cat
+        <img src="img/cat.png" style="width:300px;height:200px;" alt="cat">
+        </a>
+      </div>
+    
+      <div class="link">
+        <a href="polar-bear.html">Polar Bear
+        <img src="img/polar-bear.png" style="width:300px;height:200px;" alt="polar bear">
+        </a>
+      </div>
+
+      <div class="link">
+        <a href="racoon.html">Racoon
+        <img src="img/racoon.png" style="width:300px;height:200px;" alt="racoon">
+
+        </a>
+      </div>
     </div>
 
     <div class="link">
