fixed raccoon typo

--- a/raccoon.html
+++ b/raccoon.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Carina's Zoo - Raccoon</title>
-    <link rel="stylesheet" type="text/css" href="css/raccoon.css">
+    <link rel="stylesheet" type="text/css" href="css/racoon.css">
   </head>
   <body>
     <h1>Raccoon</h1>
-    <img src="img/racoonFreeze.gif" alt="raccoon caught in action. ">
+    <img src="img/raccoonFreeze.gif" alt="Raccoon caught in action. ">
     <p>
       Meet the raccoon! Raccoons are medium-sized 16 to 28 inch long mammals native to North America. They are easily 
       recognized by the black markings across their eyes, their pointed snouts and bushy ringed  tails. Raccoons are 
