fixed raccoon typo

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       </div>
 
       <div class="link">
-        <a href="racoon.html">Racoon
-        <img src="img/racoon.png" style="width:300px;height:200px;" alt="racoon">
+        <a href="raccoon.html">Raccoon
+        <img src="img/raccoon.png" style="width:300px;height:200px;" alt="raccoon">
         </a>
       </div>
 
