--- a/raccoon.html
+++ b/raccoon.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Carina's Zoo - Raccoon</title>
-    <link rel="stylesheet" type="text/css" href="css/racoon.css">
+    <link rel="stylesheet" type="text/css" href="css/raccoon.css">
   </head>
   <body>
     <h1>Raccoon</h1>
