--- a/polar-bear.html
+++ b/polar-bear.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Johnny's Zoo - Polar Bear</title>
+    <title>Carina's Zoo - Polar Bear</title>
     <link rel="stylesheet" type="text/css" href="css/polar-bear.css">
   </head>
   <body>
