added a whale page, whale pics, whale paragraph and link to the page via homepage

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         </a>
       </div>
 
+      <div class="link">
+        <a href="whale.html">Whale
+        <img src="img/whale.png" style="width:300px;height:200px;" alt="whale">
+        </a>
+      </div>
+
     </div>
 
   </body>
