fixed alt message

--- a/whale.html
+++ b/whale.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Whale</h1>
-    <img src="img/killerWhale.png" style="width:500px;height:250px;" alt="whale jumping gif">
+    <img src="img/killerWhale.png" style="width:500px;height:250px;" alt="killling whale jumping">
     <img src="img/whale.gif" style="width:500px;height:250px;" alt="whale jumping gif">
 
     <p>
