--- a/whale.html
+++ b/whale.html
@@ -22,4 +22,9 @@
       <li> Killer whales, the largest members of the dolphin family, are highly social and live and travel in matriarchal, led by the oldest female </li>
     </ul>
   </body>
+  <div class="link">
+    <a href="index.html">
+    <img src="img/backArrow.png" style="width:200px;height:100px;" alt="go back one page">
+    </a>
+  </div>
 </html>
