added the back aroow icon for easier user navigation, from animal page to homepage

--- a/cat.html
+++ b/cat.html
@@ -21,4 +21,9 @@
       <li>Cats have 5 toes on front paws and 4 in back paws, unless he is a polydactl</li>
     </ul>
   </body>
+  <div class="link">
+    <a href="index.html">
+    <img src="img/backArrow.png" style="width:200px;height:100px;" alt="go back one page">
+    </a>
+  </div>
 </html>
