--- a/panda.html
+++ b/panda.html
@@ -24,4 +24,9 @@
       </ul>
     </p>
   </body>
+  <div class="link">
+    <a href="index.html">
+    <img src="img/backArrow.png" style="width:200px;height:100px;" alt="go back one page">
+    </a>
+  </div>
 </html>
