changed arrow style

--- a/cat.html
+++ b/cat.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Cat</h1>
     <img src="img/cat.gif" style="width:200px;height:300px;" alt="cat">
-    <img src="img/catSports.gif" style="width:200px;height:300px;" alt="cat">
+    <img src="img/catSports.gif" style="width:200px;height:300px;" alt="cats playing sports">
 
     <p>
       Meet the cat! Cats are small carnivourous mammals that have lived alongside humans for thousands of years.
@@ -23,7 +23,7 @@
   </body>
   <div class="link">
     <a href="index.html">
-    <img src="img/backArrow.png" style="width:200px;height:100px;" alt="go back one page">
+    <img src="img/move-left.png" style="width:100px;height:100px;" alt="go back one page">
     </a>
   </div>
 </html>
