--- a/panda.html
+++ b/panda.html
@@ -26,7 +26,7 @@
   </body>
   <div class="link">
     <a href="index.html">
-    <img src="img/backArrow.png" style="width:200px;height:100px;" alt="go back one page">
+    <img src="img/move-left.png" style="width:100px;height:100px;" alt="go back one page">
     </a>
   </div>
 </html>
